add different resize methods and a recreate button in backend

--- a/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
+++ b/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
@@ -14,3 +14,11 @@ SCHUWEB_GALLERY_START_FOLDER_DESC="The root folder of your gallery."
 COM_SCHUWEB_GALLERY_CONFIGURATION="SchuWeb Gallery Options"
 SCHUWEB_GALLERY_GENERAL="Basic"
 SCHUWEB_GALLERY_GENERAL_DESC="Basic Options"
+SCHUWEB_GALLERY_CROP="crop"
+SCHUWEB_GALLERY_SCALE_FILL="scale fill"
+SCHUWEB_GALLERY_SCALE_INSIDE="scale inside"
+SCHUWEB_GALLERY_SCALE_INSIDE_CROP="scale inside and crop"
+SCHUWEB_GALLERY_SCALE_OUTSIDE="scale outside"
+SCHUWEB_GALLERY_SCALE_OUTSIDE_CROP="scale outside and crop"
+SCHUWEB_GALLERY_THUMB_RESIZE_METHOD="Resize methode"
+SCHUWEB_GALLERY_THUMB_RESIZE_METHOD_DESC="Choose which resize method should be used for creating thumbnails"
