add backend action to add videos

--- a/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.ini
+++ b/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.ini
@@ -1,2 +1,8 @@
 SCHUWEB_GALLERY_RECREATE_THUMBS="Recreate thumbnails"
 SCHUWEB_GALLERY_RECREATE_SUCCESS="Recreate thumbnails successfull!"
+SCHUWEB_GALLERY_VIDEOID="Video ID"
+SCHUWEB_GALLERY_VIDEO_SERVICE="Video Service"
+SCHUWEB_GALLERY_VIMEO="Vimeo"
+SCHUWEB_GALLERY_YOUTUBE="YouTube"
+SCHUWEB_GALLERY_VIDEOS="Videos"
+SCHUWEB_GALLERY_CP="Control Panel"
