# fixing filter / sort functions

--- a/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.ini
+++ b/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.ini
@@ -6,3 +6,4 @@ SCHUWEB_GALLERY_VIMEO="Vimeo"
 SCHUWEB_GALLERY_YOUTUBE="YouTube"
 SCHUWEB_GALLERY_VIDEOS="Videos"
 SCHUWEB_GALLERY_CP="Control Panel"
+SCHUWEB_GALLERY_SEARCH_IN_TITLE="Video ID suchen"
