--- a/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
+++ b/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
@@ -22,3 +22,8 @@ SCHUWEB_GALLERY_SCALE_OUTSIDE="scale outside"
 SCHUWEB_GALLERY_SCALE_OUTSIDE_CROP="scale outside and crop"
 SCHUWEB_GALLERY_THUMB_RESIZE_METHOD="Resize methode"
 SCHUWEB_GALLERY_THUMB_RESIZE_METHOD_DESC="Choose which resize method should be used for creating thumbnails"
+SCHUWEB_GALLERY_VIDEOS_VIEW="Video gallery view"
+SCHUWEB_GALLERY_VIDEOS_VIEW_DESC="Shows all or dedicated video services as gallery."
+SCHUWEB_GALLERY_GALLERY_VIEW_DEFAULT_TITLE="Default image gallery view"
+SCHUWEB_GALLERY_GALLERY_VIEW_DEFAULT_DESC="Displays images of a specific folder and it's subfolders"
+SCHUWEB_GALLERY_BASIC_OPTIONS_LABEL="Video gallery settings"
