add language strings from basic version

--- a/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
+++ b/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
@@ -22,3 +22,5 @@ SCHUWEB_GALLERY_SCALE_OUTSIDE="scale outside"
 SCHUWEB_GALLERY_SCALE_OUTSIDE_CROP="scale outside and crop"
 SCHUWEB_GALLERY_THUMB_RESIZE_METHOD="Resize methode"
 SCHUWEB_GALLERY_THUMB_RESIZE_METHOD_DESC="Choose which resize method should be used for creating thumbnails"
+COM_SCHUWEB_GALLERY_GALLERY_VIEW_DEFAULT_DESC="This menu type displays a gallery of images  of the folder specified in the extension options"
+COM_SCHUWEB_GALLERY_GALLERY_VIEW_DEFAULT_TITLE="Image gallery"
