--- a/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.ini
+++ b/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.ini
@@ -1,2 +1,23 @@
 SCHUWEB_GALLERY_RECREATE_THUMBS="Recreate thumbnails"
 SCHUWEB_GALLERY_RECREATE_SUCCESS="Recreate thumbnails successfull!"
+SCHUWEB_GALLERY_VIDEOID="Video ID"
+SCHUWEB_GALLERY_VIDEO_SERVICE="Video Service"
+SCHUWEB_GALLERY_VIMEO="Vimeo"
+SCHUWEB_GALLERY_YOUTUBE="YouTube"
+SCHUWEB_GALLERY_VIDEOS="Videos"
+SCHUWEB_GALLERY_CP="Control Panel"
+SCHUWEB_GALLERY_SEARCH_IN_TITLE="Video ID suchen"
+SCHUWEB_GALLERY_DETAILS="Details"
+SCHUWEB_GALLERY_PUBLISHING_DETAILS="Publish details"
+SCHUWEB_GALLERY_FIELD_CREATED_BY_ALIAS_LABEL="Created by alias"
+SCHUWEB_GALLERY_FIELD_CREATED_BY_LABEL="Created by"
+SCHUWEB_GALLERY_FIELD_CREATED_LABEL="Create time"
+SCHUWEB_GALLERY_FIELD_PUBLISH_DOWN_LABEL="Publish end"
+SCHUWEB_GALLERY_FIELD_PUBLISH_UP_LABEL="Publish"
+SCHUWEB_GALLERY_FIELD_VERSION_LABEL="Version"
+SCHUWEB_GALLERY_TAG_NAME="Tag"
+SCHUWEB_GALLERY_TAGS="Tags"
+SCHUWEB_GALLERY_FILE_LABEL="File"
+SCHUWEB_GALLERY_PATH_LABEL="Path"
+SCHUWEB_GALLERY_IMAGES="Images"
+SCHUWEB_GALLERY_RECREATE_SUCCESS="Recreate thumbnails successfull!"
