add language strings

--- a/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
+++ b/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
@@ -27,3 +27,8 @@ SCHUWEB_GALLERY_VIDEOS_VIEW_DESC="Shows all or dedicated video services as galle
 SCHUWEB_GALLERY_GALLERY_VIEW_DEFAULT_TITLE="Default image gallery view"
 SCHUWEB_GALLERY_GALLERY_VIEW_DEFAULT_DESC="Displays images of a specific folder and it's subfolders"
 SCHUWEB_GALLERY_BASIC_OPTIONS_LABEL="Video gallery settings"
+SCHUWEB_GALLERY_TAGS_VIEW="List of Tags"
+SCHUWEB_GALLERY_TAG_VIEW="Tag based gallery view"
+SCHUWEB_GALLERY_TAG_VIEW_DESC="Displays all images and videos which have the specified Tag"
+SCHUWEB_GALLERY_TAGS_VIEW_DESC="Displays a list of all tags"
+SCHUWEB_GALLERY_TAGS="Tags"
