add language strings

--- a/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.ini
+++ b/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.ini
@@ -15,3 +15,9 @@ SCHUWEB_GALLERY_FIELD_CREATED_LABEL="Create time"
 SCHUWEB_GALLERY_FIELD_PUBLISH_DOWN_LABEL="Publish end"
 SCHUWEB_GALLERY_FIELD_PUBLISH_UP_LABEL="Publish"
 SCHUWEB_GALLERY_FIELD_VERSION_LABEL="Version"
+SCHUWEB_GALLERY_TAG_NAME="Tag"
+SCHUWEB_GALLERY_TAGS="Tags"
+SCHUWEB_GALLERY_FILE_LABEL="File"
+SCHUWEB_GALLERY_PATH_LABEL="Path"
+SCHUWEB_GALLERY_IMAGES="Images"
+SCHUWEB_GALLERY_RECREATE_SUCCESS="Recreate thumbnails successfull!"
