add language strings

--- a/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
+++ b/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
@@ -32,3 +32,4 @@ SCHUWEB_GALLERY_TAG_VIEW="Tag based gallery view"
 SCHUWEB_GALLERY_TAG_VIEW_DESC="Displays all images and videos which have the specified Tag"
 SCHUWEB_GALLERY_TAGS_VIEW_DESC="Displays a list of all tags"
 SCHUWEB_GALLERY_TAGS="Tags"
+COM_SCHUWEB_GALLERY_XML_DESCRIPTION="<strong>Used scripts:</strong><ul><li><a href="_QQ_"http://www.jacklmoore.com/colorbox"_QQ_" title="_QQ_"Colorbox Website"_QQ_">Colorbox</a> by Jack Moore</li></ul>"
