add missing strings

--- a/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.ini
+++ b/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.ini
@@ -21,3 +21,5 @@ SCHUWEB_GALLERY_FILE_LABEL="File"
 SCHUWEB_GALLERY_PATH_LABEL="Path"
 SCHUWEB_GALLERY_IMAGES="Images"
 SCHUWEB_GALLERY_RECREATE_SUCCESS="Recreate thumbnails successfull!"
+COM_SCHUWEB_GALLERY_N_ITEMS_UNPUBLISHED="Videos unpublished"
+COM_SCHUWEB_GALLERY_N_ITEMS_PUBLISHED="Videos published"
