--- a/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
+++ b/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
@@ -33,3 +33,8 @@ SCHUWEB_GALLERY_TAG_VIEW_DESC="Displays all images and videos which have the spe
 SCHUWEB_GALLERY_TAGS_VIEW_DESC="Displays a list of all tags"
 SCHUWEB_GALLERY_TAGS="Tags"
 COM_SCHUWEB_GALLERY_XML_DESCRIPTION="<strong>Used scripts:</strong><ul><li><a href="_QQ_"http://www.jacklmoore.com/colorbox"_QQ_" title="_QQ_"Colorbox Website"_QQ_">Colorbox</a> by Jack Moore</li></ul>"
+SCHUWEB_GALLERY_VIDEO_GRID_BOOTSTRAP_SIZE_DESC="Choose the width of a displayed video"
+SCHUWEB_GALLERY_VIDEO_GRID_BOOTSTRAP_SIZE_LABEL="Video Bootstrap size"
+SCHUWEB_GALLERY_VIDEO_HEIGHT="Video height"
+SCHUWEB_GALLERY_VIDEO_WIDTH="Video width"
+COM_CONFIG_VIDEO_FIELDSET_LABEL="Video settings"
