add bootstrap as option

--- a/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
+++ b/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
@@ -38,3 +38,5 @@ SCHUWEB_GALLERY_VIDEO_GRID_BOOTSTRAP_SIZE_LABEL="Video Bootstrap size"
 SCHUWEB_GALLERY_VIDEO_HEIGHT="Video height"
 SCHUWEB_GALLERY_VIDEO_WIDTH="Video width"
 COM_CONFIG_VIDEO_FIELDSET_LABEL="Video settings"
+SCHUWEB_GALLERY_BOOTSTRAP_TEMPLATE="Bootstrap template in use?"
+SCHUWEB_GALLERY_BOOTSTRAP_TEMPLATE_DESC="Do you use a Joomla template which uses Bootstrap? If no choose No."
