+ add back button

--- a/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
+++ b/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.sys.ini
@@ -13,7 +13,6 @@ SCHUWEB_GALLERY_START_FOLDER="Start folder"
 SCHUWEB_GALLERY_START_FOLDER_DESC="The root folder of your gallery."
 COM_SCHUWEB_GALLERY_CONFIGURATION="SchuWeb Gallery Options"
 SCHUWEB_GALLERY_GENERAL="Basic"
-SCHUWEB_GALLERY_GENERAL_DESC="Basic Options"
 SCHUWEB_GALLERY_CROP="crop"
 SCHUWEB_GALLERY_SCALE_FILL="scale fill"
 SCHUWEB_GALLERY_SCALE_INSIDE="scale inside"
@@ -40,3 +39,11 @@ SCHUWEB_GALLERY_VIDEO_WIDTH="Video width"
 COM_CONFIG_VIDEO_FIELDSET_LABEL="Video settings"
 SCHUWEB_GALLERY_BOOTSTRAP_TEMPLATE="Bootstrap template in use?"
 SCHUWEB_GALLERY_BOOTSTRAP_TEMPLATE_DESC="Do you use a Joomla template which uses Bootstrap? If no choose No."
+
+;Since 1.9.0
+SCHUWEB_GALLERY_LAYOUT="Layout"
+SCHUWEB_GALLERY_PREVBUTTON_VISIBLE="Display previous button"
+SCHUWEB_GALLERY_PREVBUTTON_VISIBLE_DESC="Display a prev button on top, bottom or top and bottom of the gallery to go back to the parent folder. It can be hide totally."
+SCHUWEB_GALLERY_BOTH="Top and bottom"
+SCHUWEB_GALLERY_BOTTOM="Bottom"
+SCHUWEB_GALLERY_TOP="TOP"
