--- a/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.ini
+++ b/administrator/components/com_schuweb_gallery/language/en-GB/en-GB.com_schuweb_gallery.ini
@@ -23,3 +23,4 @@ SCHUWEB_GALLERY_IMAGES="Images"
 SCHUWEB_GALLERY_RECREATE_SUCCESS="Recreate thumbnails successfull!"
 COM_SCHUWEB_GALLERY_N_ITEMS_UNPUBLISHED="Videos unpublished"
 COM_SCHUWEB_GALLERY_N_ITEMS_PUBLISHED="Videos published"
+SCHUWEB_GALLERY_VIDEO_NAME="Video name"
